--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,11 @@
+/* Color
+EES659
+D75A4D
+F1C7A3
+F5DC77
+F4F0F1
+*/
+
 @font-face{ 
     font-family:"Blenda Script"; 
     src:url("../fonts/BlendaScript.otf");
