--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,7 +42,7 @@ header {
 }
 header #jam{
     height: 23px;
-    background-color: tomato;
+    background-color: rgba(255,99,71,80%);
 }
 
 header #jam #tampilanJam{
@@ -85,7 +85,7 @@ header #kepala #alamat p{
 
 #primary{  
     overflow:auto;
-    background-color: tomato;
+    background-color: rgba(255,99,71,80%);
 }
 #primary ul{ 
     list-style:none; 
@@ -110,7 +110,7 @@ header #kepala #alamat p{
     position: absolute;
     margin-top:5px; 
     border:#F1C7A3 1px solid;
-    background: tomato; 
+    background: rgba(255,99,71,80%); 
     margin-left:-11px;
 } 
 #primary ul li:hover .submenu li{ 
@@ -254,7 +254,7 @@ header #kepala #alamat p{
 /* footer */
 footer {
     padding: 0px 50px 30px 50px;
-    background-color: tomato;
+    background-color: chocolate;
 }
 
 footer #footer-column{
@@ -338,3 +338,66 @@ footer #footer-column a{
     padding-left: 10px;}
     footer #footer-column{ margin-left: 10px; width: calc(100%-100px); overflow: hidden;}
  }
+
+.mySlides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  -webkit-animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
