--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,7 @@ header #kepala #alamat p{
 #primary{  
     overflow:auto;
     background-color: rgba(255,99,71,80%);
+    z-index: 9999;
 }
 #primary ul{ 
     list-style:none; 
@@ -112,6 +113,7 @@ header #kepala #alamat p{
     border:#F1C7A3 1px solid;
     background: rgba(255,99,71,80%); 
     margin-left:-11px;
+    z-index: 9999;
 } 
 #primary ul li:hover .submenu li{ 
     display:block; 
@@ -237,20 +239,54 @@ header #kepala #alamat p{
     background-color: whitesmoke;
 }
 
-#mini {
-}
-
-#content #column #konten #mini h3{
+#content #column #konten h3{
     border-bottom-style: dashed;
     border-width: 0.5px;
     border-color: #ccc;
+    display: block;
+    font-size: 1.17em;
+    margin-block-start: 0em !important;
+    margin-block-end: 0em !important;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
 }
 
+.border {
+    border-bottom-style: dashed;
+    border-width: 0.5px;
+    border-color: #ccc;
+    padding-bottom: 10px;
+}
 #content #column #konten #mini p{
-    border-bottom-style: dashed;
-    border-width: 0.5px;
-    border-color: #ccc;
+    float: left;
 }
+
+#mini #more a{ 
+    display: inline-block;
+    float:right; 
+    overflow:auto; 
+    padding:2px 10px 2px 10px; 
+    background:#EEEEEE; 
+    border:#9178F2 1px solid; 
+    border-radius:10px; 
+    -webkit-border-radius:10px; 
+    -o-border-radius:10px; 
+    margin-bottom:10px; 
+    margin-right:10px; 
+    margin-top: 10px;
+    text-align:center; 
+    text-decoration:none; 
+    color:#000000; 
+    transition: all 0.2s;
+    }
+#mini #more a:hover{ 
+    background:#9178F2; 
+    color:#0B0B0B; 
+    border:#5B45BC 1px solid;
+    } 
+
+
 /* footer */
 footer {
     padding: 0px 50px 30px 50px;
@@ -297,7 +333,38 @@ footer #footer-column a{
     -moz-box-sizing: border-box; 
     -webkit-box-sizing: border-box;     
     box-sizing: border-box; 
+}
+#content-wrapper #artikel{
+    float: left;
+    width: 70%;     
+    height: 500px;
+}
 
+#content-wrapper #artikel h2{
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
+    width: 80%;
+}
+
+#sidebar{
+    width:30%; 
+    float:left;
+    height: 500px;
+    background-color: whitesmoke;
+    } 
+#sidebar #mars{
+    padding: 10px;
+}
+#sidebar #pendapat{
+    padding: 10px;
+}
+#sidebar audio{
+    border-style: dashed;
+    border-width: 3px;
+    width: 80%;
+    height: 40px;
+    margin: 10px 20px;
+    border-color: #D75A4D;
 }
  /* 700 */
  @media screen and (max-width:700px) {
@@ -400,4 +467,40 @@ img {vertical-align: middle;}
 @keyframes fade {
   from {opacity: .4} 
   to {opacity: 1}
+}
+
+/* card */
+.card {
+    width: 150px;
+    height : auto;
+    margin : 20px 0px 0px 20px;
+    background-color: whitesmoke;
+    border: solid thin #dddddd;
+    box-shadow: 0 0 6px #999999;
+    float: left;
+}
+
+.card .card-image center{
+    overflow: hidden;
+    max-height: 250px;
+}
+
+.card .card-title{
+    margin: -5px;
+    font-size: 30px;
+    font-weight: normal;
+    color: dimgray;
+}
+
+.card .card-content{
+    padding: 10px;
+    font-size: 14px;
+    line-height: 1.6;
+}
+
+.card .card-content .card-title{
+    font-size: 32px;
+    line-height: 1.6;
+    display: block;
+    text-align: center;
 }
