--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,11 +75,11 @@ header #kepala #alamat p{
     padding-right: 10px;
 }
 /*menu primary */
-.active {
+.active-menu {
     background-color: #F1C7A3;
 }
 
-.active a{
+.active-menu a{
     color: #000000
 }
 
@@ -255,7 +255,7 @@ header #kepala #alamat p{
 .border {
     border-bottom-style: dashed;
     border-width: 0.5px;
-    border-color: #ccc;
+    border-color: #ccc; 
     padding-bottom: 10px;
 }
 #content #column #konten #mini p{
@@ -289,6 +289,8 @@ header #kepala #alamat p{
 
 /* footer */
 footer {
+    margin-top: 20px;
+    float: left;
     padding: 0px 50px 30px 50px;
     background-color: chocolate;
 }
@@ -334,10 +336,10 @@ footer #footer-column a{
     -webkit-box-sizing: border-box;     
     box-sizing: border-box; 
 }
-#content-wrapper #artikel{
+#artikel{
     float: left;
-    width: 70%;     
-    height: 500px;
+    width: 70%;    
+    height: auto;
 }
 
 #content-wrapper #artikel h2{
@@ -349,7 +351,6 @@ footer #footer-column a{
 #sidebar{
     width:30%; 
     float:left;
-    height: 500px;
     background-color: whitesmoke;
     } 
 #sidebar #mars{
@@ -480,8 +481,10 @@ img {vertical-align: middle;}
     float: left;
 }
 
-.card .card-image center{
+.card .card-image img{
     overflow: hidden;
+    width: 100%;
+    height: 100%;
     max-height: 250px;
 }
 
@@ -503,4 +506,31 @@ img {vertical-align: middle;}
     line-height: 1.6;
     display: block;
     text-align: center;
+}
+
+.video{
+    width: 100%;
+}
+
+/* tabel */
+table {
+    width: 420px;
+    border-collapse: collapse;
+}
+
+th {
+    background: #EEEEEE;
+}
+
+td, th {
+    padding: 10px 5px;
+    border: solid thin #cccccc;
+}
+
+tr, td {
+    background: #ffffff;
+}
+
+.search{
+    float: right;
 }
